--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <title>What Drink?</title>
   </head>
   <body onclick="predict()">
-    <div>
-      <div id="webcam-container" />
-    </div>
+    <div id="webcam-container" />
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
@@ -81,11 +79,7 @@
         maxPredictions = model.getTotalClasses();
 
         const flip = true;
-        webcam = new tmImage.Webcam(
-          window.innerWidth,
-          window.innerHeight,
-          flip
-        );
+        webcam = new tmImage.Webcam(800, 800, flip);
         await webcam.setup();
         await webcam.play();
         window.requestAnimationFrame(loop);
